# AI-Secretary

./: CMakeLists.txt  CmakeLists.txt  Plan.txt  README.md
inc/: Content.hpp  TimeHelper.hpp
live2d_moudle/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Demo.sln  Demo.vcxproj  Demo.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Demo.dir/Debug/: Demo.exe.recipe
live2d_moudle/Demo.dir/Debug/Demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
live2d_moudle/Framework/: Framework.vcxproj  Framework.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/Debug/: Framework.lib
live2d_moudle/Framework/Framework.dir/Debug/Framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
live2d_moudle/Framework/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Effect/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Id/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Math/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Model/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Motion/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Physics/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Rendering/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Rendering/OpenGL/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Type/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Framework/src/Utils/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/Resources/Nahida/: Nahida.model3.json
live2d_moudle/glew/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  glew.sln  glew.vcxproj  glew_s.vcxproj  glew_s.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters
live2d_moudle/glew/glew_s.dir/Debug/glew_s.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link-cvtres.read.1.tlog  Lib-link-cvtres.write.1.tlog  Lib.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
live2d_moudle/glfw/: ALL_BUILD.vcxproj  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
live2d_moudle/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
live2d_moudle/glfw/src/Debug/: glfw3.lib
live2d_moudle/glfw/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
live2d_moudle/inc/: CMakeLists.txt  LAppDefine.hpp  LAppView.hpp
live2d_moudle/lib/Debug/: libglew32d.lib
live2d_moudle/src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LAppDefine.cpp  LAppDelegate.cpp  LAppView.cpp  cmake_install.cmake
live2d_moudle/third/glfw/src/: win32_window.c
src/: CMakeLists.txt  Content.cpp  GPT-API.cpp  TimeHelper.cpp
